facebook signing and add routes working

--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Recipes Finder</title>
     <!-- Sets Styles -->
-    <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.3/css/bootstrap.min.css">
     <!-- fonts -->
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Crafty+Girls" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway:700" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/navbar-login.css">
+    <link rel="stylesheet" href="css/navbar-home.css">
     <!-- Sets ViewPort -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Initializes Angular -->
@@ -18,7 +20,7 @@
     <!-- Initializes Angular Routes -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-route.js"></script>
     <!-- Initializes Local Scripts -->
-    <script src="app.js"></script>
+    <script src="scripts/app.js"></script>
   </head>
   <body>
 
