added https to angular

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <!-- Sets ViewPort -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Initializes Angular -->
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.min.js"></script>
     <!-- Initializes Angular Routes -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-route.js"></script>
     <!-- Initializes Local Scripts -->
