--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     <script>
     window.fbAsyncInit = function() {
         FB.init({
-          appId      : '144595975984486',
+          appId      : process.env.FBCLIENTID,
           xfbml      : true,
           version    : 'v2.5'
         });
