--- a/public/index.html
+++ b/public/index.html
@@ -48,5 +48,6 @@
 
     <div ng-view></div>
 
+<div class="fb-share-button" data-href="https://recipe-findr.herokuapp.com/Slow%20Cooker%20Mongolian%20Beef" data-layout="button" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Frecipe-findr.herokuapp.com%2FSlow%2520Cooker%2520Mongolian%2520Beef&amp;src=sdkpreparse">Share</a></div>
   </body>
 </html>
