--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,9 @@
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta property="og:url" content="https://recipe-findr.herokuapp.com/#/recipes/{{facebook.title}}"}} />
-    <meta property="og:title" content={{facebook.title}} />
-    <meta property="og:image:url" content={{facebook.image}} />
+    <meta property="og:url" content="http://recipe-findr.herokuapp.com/#/recipes/{{facebook.title}}"}} />
+    <meta property="og:title" content="{{facebook.title}}" />
+    <meta property="og:image:url" content="{{facebook.image}}" />
 
     <title>Recipes Finder</title>
     <!-- Sets Styles -->
