fixed bracket issue

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta property="og:url" content="http://recipe-findr.herokuapp.com/#/recipes/{{facebook.title}}"}} />
+    <meta property="og:url" content="http://recipe-findr.herokuapp.com/#/recipes/{{facebook.title}}" />
     <meta property="og:title" content="{{facebook.title}}" />
     <meta property="og:image:url" content="{{facebook.image}}" />
   </head>
