--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,12 @@
 <html lang="en" ng-app="RecipesFinder">
   <head ng-controller="FacebookMetaController">
 
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta property="og:url" content="http://recipe-findr.herokuapp.com/#/recipes/{{facebook.encoded_title}}" />
+    <meta property="og:title" content="{{facebook.title}}" />
+    <meta property="og:image:url" content="{{facebook.image}}" />
+
     <title>Recipes Finder</title>
     <!-- Sets Styles -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.3/css/bootstrap.min.css">
@@ -21,11 +27,7 @@
     <!-- Initializes Local Scripts -->
     <script src="scripts/app.js"></script>
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta property="og:url" content="http://recipe-findr.herokuapp.com/#/recipes/{{facebook.title}}" />
-    <meta property="og:title" content="{{facebook.title}}" />
-    <meta property="og:image:url" content="{{facebook.image}}" />
+
   </head>
   <body>
 
