hard coding og tags

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,11 @@
 <html lang="en" ng-app="RecipesFinder">
   <head ng-controller="FacebookMetaController">
 
- 
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta property="og:title" content="Recipe Finder" />
+    <meta property="og:description" content="Find, track and share your favorite recipes!" />
+    <meta property="og:image:url" content="http://i.imgur.com/6P5Lqct.jpg" />
 
     <title>Recipes Finder</title>
     <!-- Sets Styles -->
