--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
 
            window.fbAsyncInit = function(){  // this gets triggered when FB object gets initialized
               console.log("FB Object initiated");
-              FB.XFBML.parse(); // now we can safely call parse method
+               FB.XFBML.parse(document.getElementById('fb-share-button')); // now we can safely call parse method
           }; 
         </script>
 
